# XuFlow

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  README.md  docker-compose.yml  generate-icons.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  xuflow.json
.cargo/: config.toml
.claude/: settings.json
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
cli/: package.json  tsconfig.json
cli/napi/: Cargo.toml
cli/napi/src/: lib.rs
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.vue  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: chat.rs  config.rs  git.rs  mod.rs  persistence.rs  tray.rs
desktop/src/composables/: useConversationSummary.ts  useGitReview.ts  useTauriEvent.ts
desktop/src/router/: index.ts
desktop/src/stores/: agent.ts  config.ts  project.ts  review.ts  theme.ts  tray.ts
desktop/src/utils/: diffParser.ts  toolSummary.ts
desktop/src/views/: HomeView.vue  SettingsView.vue
desktop/tests/: app-shell-branding.test.mjs  chat-panel-layout.test.mjs
doc/: 2026-06-11-memory-postgres-qdrant-volcengine.md  doubao-embedding-vision-2026-06-12.md
docs/: 2026-06-19-思考过程小助手状态优化说明.md  2026-06-22-cad-vector-redraw-design.md  TAURI_BRIDGE_2026-06-14.md  UI_IMPLEMENTATION_2026-06-14.md  UI_LAYOUT_DESIGN.md  会话自动摘要功能-2026-06-17.md  桌面端UI优化建议-6-14.md
docs/important/: 2026-06-19-token上下文容量管理功能说明.md  2026-06-26-MCP协议支持实现方案.md
docs/plan/: 2026-06-16-聊天框底部输入区域重构计划.md  2026-06-17-Apple风格聊天输入区重设计.md  2026-06-19-Tier1工具实现计划.md  2026-06-22-CAD矢量电路图重绘计划.md  cheerful-cuddling-hennessy.md  glittery-doodling-narwhal.md  humble-plotting-steele.md  idempotent-marinating-teapot.md  parsed-cooking-shannon.md  structured-dreaming-kurzweil.md  swift-knitting-cloud.md  validated-zooming-deer.md  wobbly-growing-leaf.md
docs/plans/: adaptive-herding-unicorn.md  compiled-singing-lark.md  elegant-hatching-nova.md  fuzzy-petting-lollipop.md  hidden-humming-zebra.md  jiggly-swimming-pnueli.md  moonlit-greeting-rain.md  parallel-hugging-map.md  stateful-chasing-meerkat.md  virtual-sniffing-quail.md  vivid-mixing-teapot.md
src/: loop.ts  modelConfig.ts  modelPrefs.ts  tools.ts  types.ts
src/backends/: deepseek.ts  index.ts  volcengine.ts
src/memory/: conversationMemory.ts  embeddingProvider.ts  index.ts  sessionStore.ts  types.ts  vectorIndex.ts  volcengine.ts
src/ui/: app.tsx  inputCursor.ts  useAgent.ts  workspaceStatus.ts
test/: embeddingProvider.test.ts  inputCursorAnsi.test.ts  inputCursorLayout.test.ts  modelConfig.test.ts  realMemoryServices.test.ts  volcengineBackend.test.ts  volcengineMemory.test.ts  volcengineMultimodalEmbedding.test.ts  workspaceStatus.test.ts
(+23 files in other folders)
