[package]
name = "xuflow-desktop"
version.workspace = true
edition.workspace = true

[lib]
name = "xuflow_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
xuflow-core = { path = "../../packages/core" }
sqlx = { workspace = true, features = ["mysql"] }
