[package]
name = "xuflow-desktop"
version.workspace = true
edition.workspace = true

# 默认不生成 staticlib（.lib 文件在 debug 下可达 1GB），仅发布时临时开启
# 发布命令: cargo build --release 前将此行改为 crate-type = ["lib", "cdylib", "staticlib"]
[lib]
name = "xuflow_desktop_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
xuflow-core = { path = "../../packages/core" }
